wazuh-kubernetes/envs/prod/wazuh-master-node-selector.yaml
# Pin the Wazuh manager master to the dev-stage-spot-3 GKE node pool.

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wazuh-manager-master
  namespace: wazuh
spec:
  template:
    spec:
      nodeSelector:
        cloud.google.com/gke-nodepool: dev-stage-spot-3
